# Data_Structure_Compendium

./: CMakeLists.txt
include/: dynamic_stack.h  node.h  testing.h
src/: dynamic_stack.c  node.c
tests/: test_dynamic_stack.c  test_vector.c
